# rustyyaml

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: parsing.rs
benchmarks/: README.md  benchmark_comparison.py  quick_benchmark.py
docs/: ARCHITECTURE.md  migration.md
python/rustyaml/: __init__.py  __init__.pyi  compat.py
python/rustyyaml/: __init__.py  __init__.pyi  compat.py
scripts/: release.sh  update_version.sh
src/: batch.rs  error.rs  lib.rs  parser.rs  safe.rs  types.rs
tests/: test_basic.py  test_performance.py
tests/fixtures/: kubernetes.yaml  large_config.yaml  medium_config.yaml  small_config.yaml
